# PQGM-IPSec

./: .gitignore  CLAUDE.md  GITHUB_SETUP.md  MLDSA-IKE-AUTH-TEST-STATUS.md  MODULES.md  PLAN.md  PQ-GM-IKEv2_Tech_Manual.md  PQ-GM-IKEv2_Tech_Manual_QnA.md  PROJECT.md  README.md  SESSION-SUMMARY.md  USER-ACTION-REQUIRED.md  benchmark_gmalg  test_gmalg  test_mldsa_cert_extraction.c  test_mldsa_oid  test_mldsa_oid.c  test_mldsa_signer.c  test_results.md  test_x509_check  test_x509_check.c
certs/: README.md
configs/: swanctl-loopback-fixed.conf  swanctl-loopback.conf  swanctl-mlkem-test.conf  swanctl-pqgm-full.conf  swanctl-psk-test.conf  swanctl-simple.conf
docker/: docker-compose-cert.yml  docker-compose.yml  start_charon.sh  test_prf_sm3.c  test_prf_sm3_full.c
docs/: 5RTT-COMPLETE-REPORT.md  5RTT-DEBUG-JOURNEY.md  5RTT-FINAL-REPORT.md  5RTT-Performance-Data.md  5RTT-SEPARATED-IMPLEMENTATION.md  5RTT-SUCCESS-REPORT.md  5rtt-test-output.txt  5rtt_test_log.txt  BUG-GM-SYMMETRIC-STACK.md  BUG-RECORD.md  CURRENT-ISSUES-AND-SOLUTIONS.md  DOCKER-PITFALLS.md  DOCKER-TEST-GUIDE.md  DOCKER-TEST-MANUAL.md  DRAFT-REVIEW-REPORT.md  DUAL-MACHINE-DEPLOYMENT.md  Docker-Performance-Data-v2.md  Dual-VM-Performance-Data.md  Dual-VM-Test-Guide.md  FINAL-IMPLEMENTATION-REPORT.md  FIXES-RECORD.md  GIT-WORKFLOW.md  GM-INTEGRATION-SUMMARY.md  GM-SYMMETRIC-STACK-IMPLEMENTATION.md  (+19 more)
strongswan/gmalg/: Makefile  Makefile.am  Makefile.in  gmalg_crypter.c  gmalg_crypter.h  gmalg_hasher.c  gmalg_hasher.h  gmalg_plugin.c  gmalg_plugin.h  gmalg_signer.c  gmalg_signer.h  patch_strongswan.sh
(+156 files in other folders)
